force-app/main/default/objects/G2Crowd__G2_Asset__c/G2Crowd__G2_Asset__c.object-meta.xml
<CustomObject>
    <label>G2 Asset</label>
    <nameField>
        <label>G2 Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>