force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__Active__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>