force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__Details__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>