force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__G2_Deleted__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G2 Deleted</label>
    <type>Checkbox</type>
</CustomField>