force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__G2_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Updated_At__c</fullName>
    <label>G2 Updated At</label>
    <type>DateTime</type>
</CustomField>