force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__Notice__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Notice__c</fullName>
    <label>Notice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>