force-app/main/default/objects/G2Crowd__G2_Asset__c/fields/G2Crowd__URL__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>